# tessera

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml  update-leaderboard.yml
data/: models.py  store.py
docs/: categorization.md  discovery.md  leaderboard-display.md  scoring-methodology.md
signals/github/: client.py  discovery.py  models.py  scoring.py
surfaces/skills_leaderboard/: build.py  categorization.py  llm_categorize.py  pipeline.py  seed_report.py
surfaces/skills_leaderboard/config/: categories.yaml  discovery.yaml  scoring.yaml  site.yaml
surfaces/skills_leaderboard/templates/: style.css  template.html
tests/: test_build.py  test_categorization.py  test_config.py  test_discovery.py  test_github_client.py  test_llm_categorize.py  test_parsers.py  test_pipeline.py  test_scoring.py  test_seed_report.py  test_store.py
utils/: parsers.py
